// Copyright (c) 2023 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.protocol.v2;

import "com/digitalasset/canton/crypto/v0/crypto.proto";
import "com/digitalasset/canton/protocol/v0/sequencing.proto";
import "com/digitalasset/canton/protocol/v1/common.proto";
import "com/digitalasset/canton/time/v0/time_proof.proto";
import "scalapb/scalapb.proto";

// Messages sent by a participant as part of the transfer protocol
message TransferOutView {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.UnstableProtoVersion";

  com.digitalasset.canton.crypto.v0.Salt salt = 1;
  string submitter = 2;
  string contract_id = 3;
  string template_id = 4; // added in v2
  string target_domain = 5;
  com.digitalasset.canton.time.v0.TimeProof target_time_proof = 6;
  int32 target_protocol_version = 7;
  string submitting_participant = 8; // added in v2
  string application_id = 9; // added in v2
  string submission_id = 10; // optional - added in v2
  string workflow_id = 11; // optional - added in v2
  string command_id = 12; // added in v2
  int64 transfer_counter = 13; // added in v2
}

message TransferInView {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.UnstableProtoVersion";

  com.digitalasset.canton.crypto.v0.Salt salt = 1;
  string submitter = 2;
  v1.SerializableContract contract = 3;
  v0.SignedContent transfer_out_result_event = 4;
  bytes creating_transaction_id = 5;
  int32 source_protocol_version = 6;
  string submitting_participant = 7; // added in v2
  string application_id = 8; // added in v2
  string submission_id = 9; // optional - added in v2
  string workflow_id = 10; // optional - added in v2
  string command_id = 11; // added in v2
  int64 transfer_counter = 12; // added in v2
}
